# Halper

./: README.md  pyproject.toml
logging_helper/: __init__.py  logging_helper.py
stt/: __init__.py  settings.py  stt.py
tests/: conftest.py  test_stt.py  test_voice_controller.py
text_manager/: text_manager.py
voice_controller/: __init__.py  settings.py  voice_controller.py
voice_controller/tests/: conftest.py  test_voice_controller.py
